# main

./: .gitignore  CLAUDE.md  index.tree  index.tree_
.ai/: .env.agent  Cargo.toml  README.final.md  README.md  index.tree
.ai/.cargo/: config.toml  config.toml.tpl
.ai/agent/assistant/: Cargo.toml
.ai/agent/worker/: Cargo.toml
.ai/app/ACTIVE.fedlearn-mobile/lib/core/errors/: failure.dart
.ai/app/ACTIVE.fedlearn-mobile/lib/core/services/: api_client.dart
.ai/app/ACTIVE.fedlearn-mobile/lib/features/dispatch/: dispatch.dart
.ai/app/ACTIVE.fedlearn-mobile/lib/features/invoicing/: invoicing.dart
.ai/app/ACTIVE.fedlearn-mobile/lib/features/loads/: loads.dart
.ai/app/ACTIVE.fedlearn-mobile/lib/shared/widgets/: app_text_field.dart
.ai/app/openhwy-platform/marketing_html/: dispatcher-callout.html
.ai/model/engines/llama.cpp/src/: main.rs
.ai/pkg/: CLAUDE.md  index.tree
.ai/pkg/agent-devtools/pytorch-trainer/core/: paths.py
.ai/pkg/core-examples/: agent_client.rs
.ai/pkg/design-systems/astro/components/Card/: CardSurface.astro
.ai/pkg/design-systems/astro/components/Section/PricingSession/: PricingSection.astro
.ai/pkg/design-systems/flutter/: main.dart  theme.dart
.ai/pkg/design-systems/svelte/components/core/: Button.svelte
.ai/pkg/devtool-scripts/collect/: start-lead-system.sh
.ai/pkg/devtool-scripts/common/: analyze-full-projects.zsh
.ai/pkg/devtool-scripts/utility/.broken/: dotfiles_setups.sh
.ai/pkg/main-configs/core-schemas/: trucking-sources.yaml
.ai/pkg/model-runtimes/llama.cpp/src/prompts/: format.rs
.ai/pkg/model-runtimes/llama.cpp/src/runtimes/: model_check.rs
.ai/pkg/model-runtimes/openvino/: Dockerfile
.ai/pkg/price-guilds/but-you-said/: t01.trust.md  t03.but.md  t17.whiteboarding.md
.ai/pkg/price-guilds/i-wrote-it-anyway/: t07.when.md
.ai/pkg/price-guilds/ill-do-it-anyway/: t07.when-i-saw-it.md  t14.why-am-i-mad-a-something-i-did.md  t20.you-was-right-there-was-a-syntax-error.md  t29.help-who-wants-to-build-next.md
.ai/pkg/price-guilds/long-way-home/: t13.dont-hit-nothing.md  t14.mirror.md  t20.wings.md  t25.tip-from-jeff-brown.md
.ai/pkg/setup-scripts/: integrate-rag.sh
.ai/pkg/system-studies/design-systems/astro-resources/auth/: signup.astro
.ai/pkg/system-studies/design-systems/astro-resources/components/Button/: button.variants.ts  index.ts_
.ai/pkg/system-studies/design-systems/astro-resources/components/CTA/: CTA.astro
.ai/pkg/system-studies/design-systems/astro-resources/components/Hero/: hero.variants.ts
.ai/pkg/system-studies/design-systems/flutter-resources/configs/: env.dart
.ai/pkg/system-studies/design-systems/flutter-resources/services/: document_service.dart  logger.dart
.ai/pkg/system-studies/design-systems/nextjs-resources/components/layout/: index.ts
.ai/pkg/system-studies/design-systems/svelte-resources/: .env.example
.ai/pkg/system-studies/design-systems/svelte-resources/backend/: test_agents.py
.ai/pkg/system-studies/design-systems/svelte-resources/components/core/: Notification.svelte
.ai/pkg/system-studies/design-systems/svelte-resources/components/services/: ServiceCard.svelte
.ai/pkg/system-studies/environments/: ZBOX-MEMORY-FEATURES.md  env-examples
.ai/pkg/system-studies/languages/: glue-vs-engine.md
.ai/pkg/system-studies/questions/: compression-and-lock-guilds.md  env-access-bootstrap-setup.md  public-wifi-bypass-tunneling-designs.md
.ai/scripts/: deploy.sh  nix-deploy.sh
.ai/shared/crates/conversation-intelligence/: Cargo.toml  build.sh
.ai/shared/crates/crate-builder/: Cargo.toml
.ai/shared/crates/crate-builder/src/: lib.rs
.ai/shared/crates/rag-qdrant/: Cargo.toml
.ai/shared/crates/shared-types/: Cargo.toml
.ai/shared/crates/surrealdb-executor/: Cargo.toml
.ai/shared/crates/web-search/: Cargo.toml
.ai/shared/crates/web-search/src/: lib.rs
.ai/shared/crates/workflow-engine/: Cargo.toml
.ai/shared/docs/: INTEGRATION_GUIDE.md  NIXOS_DEPLOYMENT.md
.ai/shared/docs/core/: QUICKSTART.md
.ai/shared/pkgs/: index.tree
.ai/shared/pkgs/devtool-scripts/agent/: start.sh  trigger-collection-api.sh  update_with_env_pairs.py
.ai/shared/pkgs/devtool-scripts/common/: remove-barrel-typescript-ui.sh
.ai/shared/pkgs/lua-projects/: main.lua
.ai/shared/pkgs/lua-projects/lua/: README.md
.ai/shared/pkgs/lua-projects/lua/fdart/: cli.lua  commands.lua
.ai/shared/pkgs/nixos-envs/: agentic-system.nix  flake.nix  shell.nix
.ai/shared/pkgs/nixos-envs/nodes/: README.md  callbox-example.nix  gpubox-example.nix  workbox-example.nix
.ai/shared/pkgs/project-generator/: QUICK-REFERENCE.md  complete-cloud-stack.yaml  complete-import-map.py
.ai/shared/pkgs/project-generator/scripts/: setup-phase4-clients.sh  setup-project.sh
.ai/shared/pkgs/template-engine/k8s/: argocd.schema.yaml  grafana.schema.yaml
.ai/src/: main.rs
.env/: index.tree  (+1 more)
.mark/ai-crates/agent/Trucker_Tales/: Cargo.toml
.mark/ai-crates/agent/Trucker_Tales/src/: emotion_enhancer.rs
.mark/ai-crates/chat/: Cargo.toml
.mark/ai-crates/data/: Cargo.toml
.mark/ai-crates/lead::handler/: Cargo.toml
.mark/ai-crates/lead::scraper/: Cargo.toml
.mark/ai-crates/pdf/: Cargo.toml
.mark/ai-crates/prompt/: Cargo.toml
.mark/ai-crates/vision/: Cargo.toml
agents/03->cargo_connect/: Cargo.toml
freightdev/MarkOS/lib/Codriver/: Cargo.toml
freightdev/MarkOS/lib/Codriver/etc/systemd/: codriver-user.service  codriver.service  lead-scraper.service
freightdev/MarkOS/lib/Codriver/src/: main.rs
freightdev/MarkOS/lib/Codriver/src/core/: llm.rs
freightdev/MarkOS/lib/Codriver/src/handlers/: mod.rs
freightdev/MarkOS/lib/Codriver/src/routes/: mod.rs
freightdev/MarkOS/lib/Codriver/src/tls/: mod.rs
freightdev/MarkOS/lib/Marketeer/: Cargo.toml
freightdev/MarkOS/lib/Marketeer/etc/systemd/: marketeer.service
freightdev/MarkOS/lib/Marketeer/src/config/: types.rs
freightdev/OpenHWY/src/crates/file/: Cargo.toml
freightdev/OpenHWY/src/crates/screen/: Cargo.toml
store/public/studies/languages/: Cargo.toml  cargo-rules.md  cc.md  crates-vs-packages2.md  macros&codegen.md  wrapper.h
(+1680 files in other folders)
