[workspace]
resolver = "2"

members = [
    "shared/crates/conversation-intelligence",
    "shared/crates/crate-builder",
    "shared/crates/data-collector",
    "shared/crates/database-manager",
    "shared/crates/file-operation",
    "shared/crates/lead-analyzer",
    "shared/crates/lead-manager",
    "shared/crates/lead-scraper",
    "shared/crates/mcp-server",
    "shared/crates/messaging-service",
    "shared/crates/pdf-service",
    "shared/crates/prompt-security",
    "shared/crates/rag-qdrant",
    "shared/crates/screen-controller",
    "shared/crates/service-manager",
    "shared/crates/shared-types",
    "shared/crates/surrealdb-executor",
    "shared/crates/ui-render",
    "shared/crates/vision-controller",
    "shared/crates/web-scrapper",
    "shared/crates/web-search",
    "shared/crates/workflow-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jesse E.E.W. Conley <jesse.freightdev@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"

# Model backends
candle-core = { version = "0.7", optional = true }
candle-nn = { version = "0.7", optional = true }
# llama-cpp bindings would go here
# openvino bindings would go here

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
