[package]
name = "cargoconnect"
version = "0.0.1"
edition = "2021"
authors = ["Fast & Easy Dispatching LLC"]
description = "Securely connects users to their own freight data from load board accounts"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web server & browser automation
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
headless_chrome = "1.0"
fantoccini = "0.20"

# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML parsing
scraper = "0.18"
select = "0.6"

# Credential & session management
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Regex for parsing
regex = "1.10"

# Cookie handling
cookie = "0.18"

[profile.release]
opt-level = 3
lto = true
