[package]
name = "code-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client (for Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# Database
surrealdb = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Process execution
tokio-process = "0.2"

# System info
sysinfo = "0.31"
