[package]
name = "worker"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
model-router = { path = "../model-router" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
