[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Cron scheduling
tokio-cron-scheduler = "0.10"

# Database
surrealdb = "2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CSV parsing
csv = "1"

# YAML parsing
serde_yaml = "0.9"
