[package]
name = "surrealdb-executor"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
worker = { path = "../worker" }
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb = "2.0"
