[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# For workflow definitions
serde_yaml = "0.9"

# State machine
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
