[package]
name = "truckers_tales"
version = "0.0.1"
edition = "2021"
authors = ["OpenHWY Foundation"]
description = "A storytelling agent that preserves trucker experiences for posterity"
license = "CC-BY-SA-4.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Voice-to-text (whisper integration)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Story processing
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Document generation
pulldown-cmark = "0.9"  # Markdown processing
epub-builder = "0.7"     # EPUB generation
printpdf = "0.7"         # PDF generation

# Text processing
unicode-segmentation = "1.10"
textwrap = "0.16"

# Emotion/sentiment analysis
vader_sentiment = "0.1"

# File handling
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Encryption for tale storage
aes-gcm = "0.10"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
