[package]
name = "codriver"
version = "0.1.0"
edition = "2021"
authors = ["OpenHWY Team"]
description = "Co-Driver - API Gateway & AI Orchestrator with RAG+MCP"
license = "AGPL-3.0"

[[bin]]
name = "codriver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP framework (API Gateway)
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "fs"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# OpenHWY crates (RAG + MCP)
# qdrant-rag = { path = "../../ai-crates/rag::qdrant" }
# mcp-rust = { path = "../../ai-crates/mcp" }

# AI/LLM
# llama-cpp-rs = "0.1"  # Commented out for now

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenv = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Auth/Security
jsonwebtoken = "9.2"
argon2 = "0.5"
sha2 = "0.10"

# Rate limiting
governor = "0.6"

# Metrics
prometheus = "0.13"

# WebSocket
tokio-tungstenite = "0.21"

# File watching
notify = "6.1"

[dev-dependencies]
tempfile = "3.8"
httpmock = "0.7"

[lib]
name = "codriver"
path = "src/lib.rs"