[package]
name = "marketeer"
version = "0.1.0"
edition = "2021"
authors = ["OpenHWY Team"]
description = "Marketeer - Edge Router with Pingora"
license = "AGPL-3.0"

[[bin]]
name = "marketeer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Pingora (Edge Router) - Commented out for now
# pingora = "0.1"
# pingora-core = "0.1"
# pingora-proxy = "0.1"
# pingora-load-balancing = "0.1"
# pingora-http = "0.1"

# HTTP framework (for admin API)
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "fs"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenv = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Metrics
prometheus = "0.13"

# File watching
notify = "6.1"

[dev-dependencies]
tempfile = "3.8"
httpmock = "0.7"

[lib]
name = "marketeer"
path = "src/lib.rs"