[package]
name            = "llama_runner"
version         = "0.1.0"
edition         = "2024"
build           = "build.rs"
authors         = ["Jesse E.E.W. <jesse.freightdev@gmail.com>"]
description     = "High-performance Rust FFI wrapper for llama.cpp with HTTP API server"
documentation   = "https://docs.rs/llama_runner"
homepage        = "https://github.com/freightdev/llama_runner"
repository      = "https://github.com/freightdev/llama_runner"
license         = "Apache-2.0"
keywords        = ["llama", "ai", "llm", "inference", "rust", "ffi"]
categories      = ["api-bindings", "web-programming::http-server", "science"]
readme          = "README.md"
rust-version    = "1.85"

[lib]
name = "llama_runner"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "llama_runner"
path = "src/main.rs"
required-features = ["api-server"]

# Features for different build configurations
[features]
default = ["safe-wrappers"]

# Core features
safe-wrappers = []
regen-bindings = []         # build.rs checks for this feature

# API server
api-server = [
    "tokio", 
    "axum", 
    "tower", 
    "tower-http", 
    "hyper",
    "futures",
    "uuid"
]

# GPU acceleration features
gpu = ["cuda", "metal", "opencl", "vulkan"]
cuda = []
metal = []
opencl = []
vulkan = []

# Performance features
avx = []
avx2 = []
f16c = []
fma = []
accelerate = [] # Apple Accelerate framework

# Development features
dev = ["tracing-subscriber/json", "console-subscriber"]
telemetry = ["metrics", "metrics-prometheus", "opentelemetry"]

# Build dependencies for FFI generation
[build-dependencies]
bindgen = "0.69"
num_cpus = "1.16"
cc = "1.0"
pkg-config = "0.3"

# Optional: For generating C headers from Rust
cbindgen = { version = "0.26", optional = true }

# Core runtime dependencies
[dependencies]
# Error handling - essential for FFI
anyhow = "1.0"
thiserror = "1.0"

# Serialization - for API and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
log = "0.4"

# Configuration management
config = "0.14"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"

# Async runtime (optional for API server)
tokio = { version = "1.0", features = [
    "rt-multi-thread", 
    "macros", 
    "sync", 
    "time",
    "fs",
    "process",
    "signal"
], optional = true }
futures = { version = "0.3", optional = true }

# HTTP server stack (optional)
axum = { version = "0.7", features = [
    "http2",
    "json",
    "multipart",
    "ws",
    "headers"
], optional = true }
tower = { version = "0.4", features = [
    "timeout",
    "rate-limit", 
    "load-shed"
], optional = true }
tower-http = { version = "0.5", features = [
    "cors",
    "trace", 
    "compression-gzip",
    "compression-br",
    "fs",
    "auth"
], optional = true }
hyper = { version = "1.0", features = ["server", "http1", "http2"], optional = true }

# Memory management
bytes = "1.5"
memmap2 = "0.9"

# Performance monitoring (optional)
metrics = { version = "0.22", optional = true }
metrics-prometheus = { version = "0.6", optional = true }

# Observability (optional)
opentelemetry = { version = "0.21", optional = true }
console-subscriber = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific GPU libraries
nix = "0.27"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies
windows = { version = "0.52", features = [
    "Win32_System_Performance",
    "Win32_System_SystemInformation"
]}

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
wiremock = "0.5"
serial_test = "3.0"

# HTTP client for testing API
reqwest = { version = "0.11", features = ["json", "stream"] }

# Test utilities
pretty_assertions = "1.4"
insta = "1.34"

# Performance benchmarks
[[bench]]
name = "ffi_benchmark"
harness = false
required-features = ["safe-wrappers"]

[[bench]]
name = "inference_benchmark" 
harness = false
required-features = ["safe-wrappers"]

[[bench]]
name = "api_benchmark"
harness = false
required-features = ["api-server"]

# Examples
[[example]]
name = "simple_inference"
required-features = ["safe-wrappers"]

[[example]]
name = "batch_processing"
required-features = ["safe-wrappers"]

[[example]]
name = "streaming_inference"
required-features = ["safe-wrappers"]

[[example]]
name = "api_server"
required-features = ["api-server"]

[[example]]
name = "gpu_inference"
required-features = ["safe-wrappers", "gpu"]

# Profile configurations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

# Custom profile for maximum performance
[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Patch dependencies for specific versions or local development
[patch.crates-io]
# Example: Use a specific fork or local version
# bindgen = { git = "https://github.com/rust-lang/rust-bindgen", branch = "main" }

