[package]
name = "file-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File operations
walkdir = "2.4"
