[package]
name = "screen-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Process execution
tokio-process = "0.2"

# Image capture
image = "0.25"
screenshots = "0.5"

# X11/Wayland automation
enigo = "0.2"

# Async traits
async-trait = "0.1"

# UUID for task IDs
uuid = { version = "1", features = ["v4", "serde"] }
